fixed the no background on mobile menu for secondary pages (not working for landing). Set the footer to be properly responsive. Gave courses sections id's and made the tiles on the home page link up to them.

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -4,6 +4,7 @@ $theme-off-white: #F2F3F4;
 $theme-red: #128, 0, 35, 66;
 $theme-pink: #DB0A5B;
 $theme-blue: #4183D7;
+$theme-dblue: #292E48;
 /*******************************************************************************
 // GLOBAL //
  ******************************************************************************/
@@ -17,7 +18,6 @@ html{
 body{
 	
 	x-overflow:hidden;
-	margin-right: -25px;
 	background-color: $theme-off-white;
 }
 hr{
@@ -50,11 +50,13 @@ a:hover, a:focus{
   //font-weight: bold;
   background-color: transparent;
 }
-.navbar-collapse{
+.navbar-collapse.in, .navbar-collapse.collapsing
+{
 	z-index: 1000;
+	background: rgba(0,0,0,0.7);
 }
 .navbar {
-	min-height: 36px;
+	min-height: 50px;
 }
 .navbar-brand {
 	padding-top: 10px;
@@ -113,7 +115,7 @@ a:hover, a:focus{
 	border: $theme-black;
 	margin-bottom: 0px;
 	margin-top: 5em;
-	height: 223px;
+/* 	height: 223px; */
     
 	ul
 	{
@@ -149,7 +151,7 @@ a:hover, a:focus{
 	@extend .col-sm-offset-0;
 
 	@extend .col-md-3;
-	@extend .col-xs-3;
+	@extend .col-xs-12;
   
   li 
   {
@@ -591,7 +593,7 @@ nav a:focus {
 
 	.footer
 	{
-		height: 240px;
+/* 		height: 240px; */
 	}
 	#bottom-Links
 	{
